# NewsBot

./: .gitignore  Dockerfile  bot_entrypoint.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  scheduler.sh  scheduler_entrypoint.sh  script.py
alembic/: env.py
alembic/versions/: 0dd2287b640d_add_unique_field_in_table_news_messages.py  2575457bc835_add_weather_table.py  2636a77af062_add_field_city_in_user_table.py  560ddd0d22a0_add_time_fields_in_user_table.py  5a013f217707_create_news_table.py  74c6ef3c1a38_add_rate_table.py  bfb7bd0a9591_remove_column.py  d7d18585a1d5_add_table_feedback.py  f6d3737aa66f_add_user_table.py
src/: bot_handler.py  main.py  models.py  scheduler.py
src/app/: bot.py  models.py  scheduler.py
src/app/bot/: __init__.py  buttons.py  handler.py  handlers.py  models.py  run.py  service.py
src/app/mailing/: __init__.py  run.py  service.py
src/app/parser/: __init__.py  run.py  service.py
src/bot/: run.py
src/config/: __init__.py  db.py  settings.py
src/mailing/: run.py
src/parser/: run.py  service.py
src/tasks/: schedule.py  service.py
tests/: conftest.py  setup_db.py
tests/bot/: test_handlers.py
